--- a/script.css
+++ b/script.css
@@ -1,6 +1,6 @@
 body{
     margin: 0%;
-    background-color: rgb(5, 5, 5);
+    background-color: rgba(24, 167, 131, 0.151);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     
