--- a/script.css
+++ b/script.css
@@ -1,8 +1,9 @@
 body{
     margin: 0%;
-    background-color: rgba(24, 167, 131, 0.151);
+    background-color: rgba(22, 22, 22, 0.151);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
+    color: white    ;
     
 }
 
