--- a/script.css
+++ b/script.css
@@ -2,7 +2,7 @@ body{
     margin: 0%;
     background-color: rgba(5, 5, 5, 0.151);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: medium;
+    font-size:x-large;
     color: white    ;
     
 }
