--- a/script.css
+++ b/script.css
@@ -54,9 +54,11 @@ background-color: yellow;
     background-color: yellow;
 }
 #divideText{
-    font-size:medium;
-    color:yellow;
+    font-size:large;
+    color:white;
     background-color: red;
     border-radius:5px;
     cursor: pointer;
-}
+    padding: 8px;   
+       
+}   
